# PirateBoy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
include/: cpu.h  memory.h
src/: cpu.c  main.c
tests/cpu/: opcode.c
